--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
 </head>
 <body>
     <h1>Portfolio Stephanie Vuylsteke</h1>
-    <p></p>
-    <nav class="navbar">
-        <a class="navbar__brand" href="#"><img class="navbar__logo" src="assets/img/logo.svg" alt="Crapchat 4 Business"></a>
-        <a class="navbar__item" href="#">Add Products</a>
-        <a class="navbar__item navbar__item--active" href="#">Audiences</a>
-        <a class="navbar__item" href="#">Measurement</a>
-        <a class="navbar__item" href="#">Inspiration</a>
-        <a class="navbar__item" href="#">Insights & News</a>
-    </nav>
+    <p>Opleiding</p>
+    <img src="images/dog.jpeg" class="img_border-lightblue">
 </body>
 </html>
