--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
     <p> Mijn naam is Stephanie Vuylsteke. Ik ben een 23-jarige studente uit Koolskamp in West-Vlaanderen. </p>
     
     <h2><strong> Opleiding</strong> </h2>
-    <p> 2017 – heden: Bachelor grafische en digitale media - Arteveldehogeschool, Gent<p> 
+    <p>In mijn vorige opleiding heb ik Communicatiemangement gestudeerd aan de Arteveldehogeschool in Gent<p> 
     <p> 2013 – 2017: Bachelor communicatiemanagement - 
       Arteveldehogeschool, Gent </p>
-    <p> 2008 – 2013: Handel - 
-      Instituut de Pélichy, Izegem </p>
-    <p>2006 – 2008: Handel - 
-            Sint-Vincentiusinstituut, Lendelede</p>
+  
     
     <h2><strong> Werkervaring</strong> </h2>
     <h3>Vakantiejobs</h3>
