--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
     <link rel= "stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    <h1>Portfolio Stephanie Vuylsteke</h1>
+    <h1>Stephanie Vuylsteke</h1>
     <img src="assets/images/_MG_8657.jpg">
-    <p>Opleiding</p>
     <h2><strong> Persoonlijke informatie</strong> </h2>
-    <p>Naam: Stephanie Vuylsteke</p>
-    <p> Mijn naam is Stephanie Vuylsteke. Ik ben een 23-jarige studente uit Koolskamp in West-Vlaanderen. </p>
-    
+    <p> Mijn naam is Stephanie Vuylsteke. Ik ben een 23-jarige studente uit Koolskamp, West-Vlaanderen. </p>
     <h2><strong> Opleiding</strong> </h2>
-    <p>In mijn vorige opleiding heb ik Communicatiemangement gestudeerd aan de Arteveldehogeschool in Gent<p> 
+    <p>In juni 2017 heb ik mijn bachelor in het Communicatiemanagement afgewerkt en begin september begon ik aan een nieuw avontuur.<p> 
      
 </body>
 </html>
