--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
 <body>
     <h1>Stephanie Vuylsteke</h1>
     <img src="assets/images/_MG_8657.jpg">
-    <h2><strong> Persoonlijke informatie</strong> </h2>
-    <p> Mijn naam is Stephanie Vuylsteke. Ik ben een 23-jarige studente uit Koolskamp, West-Vlaanderen. </p>
-    <h2><strong> Opleiding</strong> </h2>
-    <p>In juni 2017 heb ik mijn bachelor in het Communicatiemanagement afgewerkt en begin september begon ik aan een nieuw avontuur.<p> 
-     
+        <h2><strong> Persoonlijke informatie</strong> </h2>
+            <p> Mijn naam is Stephanie Vuylsteke. Ik ben een 23-jarige studente uit Koolskamp, West-Vlaanderen. </p>
+        <h2><strong> Opleiding</strong> </h2>
+            <p>In juni 2017 heb ik mijn bachelor in het Communicatiemanagement afgewerkt en begin september begon ik aan een nieuw avontuur.<p> 
+            <p>Doorheen mijn opleiding merkte ik al snel op dat het grafisch vormgeven mij echt interesseerde.</p>
+            <p>Tijdens mijn stage bij Toerisme Oostende vzw werkte ik op de event- en marketingafdeling.</p>
+            <p>Hier mocht ik af en toe eens samenwerken met de grafische vormgever van het bedrijf. Die taken kregen uiteraard altijd voorrang.</p>
+        <h2><strong>Werkervaring</strong></h2>
+            <p>Tijdens de laatste twee jaren in het secundair onderwijs mocht ik twee dagen op stage per week in eenzelfde bedrijf.</p>
+            <p>In het vijfde middelbaar was dit in Handsaeme Machinery en in het laatste jaar bij Verstraetebouw. </p>
+        <h2><strong>Toekomstplannen</strong></h2>
+            <p>Mocht het mogelijk zijn, zou ik later heel graag de twee jobs combineren. </p>
+            <p>Met andere woorden een communicatiemanager waaruit het takenpakket ook uit vormgeven bestaat.</p>
 </body>
 </html>
