--- a/index.html
+++ b/index.html
@@ -8,20 +8,41 @@
     <link rel= "stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    <h1>Stephanie Vuylsteke</h1>
-    <img src="assets/images/_MG_8657.jpg">
-        <h2><strong> Persoonlijke informatie</strong> </h2>
-            <p> Mijn naam is Stephanie Vuylsteke. Ik ben een 23-jarige studente uit Koolskamp, West-Vlaanderen. </p>
-        <h2><strong> Opleiding</strong> </h2>
-            <p>In juni 2017 heb ik mijn bachelor in het Communicatiemanagement afgewerkt en begin september begon ik aan een nieuw avontuur.<p> 
-            <p>Doorheen mijn opleiding merkte ik al snel op dat het grafisch vormgeven mij echt interesseerde.</p>
-            <p>Tijdens mijn stage bij Toerisme Oostende vzw werkte ik op de event- en marketingafdeling.</p>
-            <p>Hier mocht ik af en toe eens samenwerken met de grafische vormgever van het bedrijf. Die taken kregen uiteraard altijd voorrang.</p>
-        <h2><strong>Werkervaring</strong></h2>
-            <p>Tijdens de laatste twee jaren in het secundair onderwijs mocht ik twee dagen op stage per week in eenzelfde bedrijf.</p>
-            <p>In het vijfde middelbaar was dit in Handsaeme Machinery en in het laatste jaar bij Verstraetebouw. </p>
-        <h2><strong>Toekomstplannen</strong></h2>
-            <p>Mocht het mogelijk zijn, zou ik later heel graag de twee jobs combineren. </p>
-            <p>Met andere woorden een communicatiemanager waaruit het takenpakket ook uit vormgeven bestaat.</p>
+        <div class="grid__container">
+                <div class="grid__row">    
+                    <div class="grid__column-12 grid__column-sm-8">  
+                        <h1><strong>Stephanie Vuylsteke</strong></h1>
+                        <h2><strong> Persoonlijke informatie</strong> </h2>
+                        <p> Mijn naam is Stephanie Vuylsteke. Ik ben een 23-jarige studente uit Koolskamp, West-Vlaanderen. </p>
+                            <h2> Opleidingen </h2>
+                                <ul>
+                                    <li> <strong>Bachelor in het Communicatiemanagement</strong>- <a href="https://www.arteveldehogeschool.be/opleidingen/bachelor/communicatiemanagement">Arteveldehogeschool Gent, Kantienberg</a>: 2013 - 2017</li>
+                                    <li> <strong>Bachelor in Grafische en Digitale Media met afstudeerrichting Crossmedia-ontwerp</strong> - <a href="https://www.arteveldehogeschool.be/opleidingen/bachelor/grafische-en-digitale-media/crossmedia-ontwerp">Arteveldehogeschool Gent, Mariakerke</a>: 2017 - heden</li>
+                                </ul>
+                        </div>
+                    <div class="grid__column-12 grid__column-sm-4">   
+                            <img class="fotostephanie" src="assets/images/_MG_8657.jpg" alt="Foto Stephanie Vuylsteke">   
+                    </div>
+                </div>    
+                 <div class="grid__row">    
+                    <div class="grid__column-12 grid__column-sm-7">    
+                            <h2><strong>Werkervaring</strong></h2>
+                            <h3>Vakantiejobs</h3>
+                            <ul>
+                                <li>Filmfestival Oostende: augustus - september 2017</li>
+                                <li>Apotheek Vereenooghe: zomer 2012-2013</li>
+                            </ul>
+                            <h3>Stages</h3>
+                            <ul>
+                                    <li>Toerisme Oostende vzw: 10 april - 24 juni 2017</li>
+                                    <li>Verstraetebouw: 2013</li>
+                                    <li>Handsaeme Machinery: 2012</li>
+                                </ul>
+                        <h2><strong>Toekomstplannen</strong></h2>
+                            <p>Indien mogelijk zou ik later het liefst mijn twee diploma's combineren. </p>
+                            <p>Graag word ik een communicatiemanager met een takenpakket dat ook uit grafisch vormgeven bestaat. </p>
+                    </div>
+                </div>   
+        </div>
 </body>
 </html>
