--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio Stephanie Vuylsteke</title>
     <link rel= "stylesheet" href="assets/css/main.css">
+    <link rel= "stylesheet" href="assets/css/grid.css">
 </head>
 <body>
         <div class="grid__container">
