--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 <body>
         <div class="grid__container">
                 <div class="grid__row">    
+                        <div class="grid__column-12 grid__column-sm-12">  
+                                <h1><strong>Stephanie Vuylsteke</strong></h1>
+                        </div>
+                </div>
+                <div class="grid__row">    
                     <div class="grid__column-12 grid__column-sm-8">  
-                        <h1><strong>Stephanie Vuylsteke</strong></h1>
                         <h2><strong> Persoonlijke informatie</strong> </h2>
                         <p> Mijn naam is Stephanie Vuylsteke. Ik ben een 23-jarige studente uit Koolskamp, West-Vlaanderen. </p>
                             <h2> Opleidingen </h2>
@@ -26,7 +30,7 @@
                     </div>
                 </div>    
                  <div class="grid__row">    
-                    <div class="grid__column-12 grid__column-sm-7">    
+                    <div class="grid__column-12 grid__column-sm-8">    
                             <h2><strong>Werkervaring</strong></h2>
                             <h3>Vakantiejobs</h3>
                             <ul>
